--- a/AppListaVip/app/src/main/AndroidManifest.xml
+++ b/AppListaVip/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppListaVip"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
         <activity
             android:name=".view.MainActivity"
-            android:exported="true">
+            android:exported="true"
+
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
